# adopt-a-doodle

./: .gitignore  Cargo.toml  LICENSE  __init__.py  pyproject.toml  readme.md
rustydoodle/src/: lib.rs
src/: lib.rs  main.py
src/adopt_a_doodle/: __init__.py  adopt.py
src/adopt_a_doodle/rustydoodle/: Cargo.toml
src/adopt_a_doodle_vhou-atroph/: adopt.py  cinnamon.py
src/adopt_a_doodle_vhou-atroph/rustydoodle/src/: lib.rs
src/rustydoodle/: Cargo.toml
src/rustydoodle/src/: lib.rs
tests/: cinnamon.py  example_doodle.py
