[package]
name = "rustydoodle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustydoodle"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.17.1"
features = ["extension-module"]

[package.metadata.maturin]
name = "adopt_a_doodle.rustydoodle"